--- a/E01.md
+++ b/E01.md
@@ -6,27 +6,32 @@
 1. How many missed classes are allowed without making arrangements with the professor?
 1. What is a slip day, how many are you allowed?
 1. Can slip days be used on labs?
-//Should you expect all programming assignments to take you approximately the same amount of time?
+// Should you expect all programming assignments to take you approximately the same amount of time?
 1. According to the academic honesty policy, which of the following are permitted?
-Talking about your approach to a problem with your classmates.
-Submitting someone else’s program as your own.
-Copying a few lines of someone else’s code into your solution, if you understand those lines in detail.
-Looking at a classmate’s code, then immediately sitting down and typing out a very similar program, but with different variable names.
-Looking at a classmate’s code, then taking a half hour break before sitting down to write your own.
-1A - Computers and Hardware
-Computers have (at least) two components that store information: main memory (RAM) and secondary storage (e.g., hard drives). Why are both needed?
-Which hardware component actually executes software instructions? Can it directly execute Python instructions?
-1B - Algorithms and Pseudocode
-Write pseudocode for a program that repeatedly prompts a user for non-negative integers; once the user inputs a negative number, the program ends and outputs the sum of the input positive integers.
-1C - Calling Functions, print, and input
-Which of the following lines of Python contain a comment?
+    - Talking about your approach to a problem with your classmates.
+    - Submitting someone else’s program as your own.
+    - Copying a few lines of someone else’s code into your solution, if you understand those lines in detail.
+    - Looking at a classmate’s code, then immediately sitting down and typing out a very similar program, but with different variable names.
+    - Looking at a classmate’s code, then taking a half hour break before sitting down to write your own.
 
-# Author: Scott Wehrwein
-print("Hello!") # greet the user
-input("Enter your favorite 2-digit number (##): ")
-What does the following code print?
+## 1A - Computers and Hardware
+1. Computers have (at least) two components that store information: main memory (RAM) and secondary storage (e.g., hard drives). Why are both needed?
+1. Which hardware component actually executes software instructions? Can it directly execute Python instructions?
 
+## 1B - Algorithms and Pseudocode
+1. Write pseudocode for a program that repeatedly prompts a user for non-negative integers; once the user inputs a negative number, the program ends and outputs the sum of the input positive integers.
+
+## 1C - Calling Functions, print, and input
+1. Which of the following lines of Python contain a comment?
+    1. ` # Author: Prof X `
+    1. ` print("Hello!") # greet the user `
+    1. ` input("Enter your favorite 2-digit number (##): ") `
+ 
+1. What does the following code print? 
+
+```
 print("CSCI", 99 + 42, "at WWU")
+```
 What does the following code print?
 
 print("CSCI", "99 + 42", "at WWU")
