--- a/E01.md
+++ b/E01.md
@@ -29,15 +29,14 @@
  
 1. What does the following code print? 
 
-```
-print("CSCI", 99 + 42, "at WWU")
-```
-What does the following code print?
+` print("CSCI", 99 + 42, "at WWU") `
 
-print("CSCI", "99 + 42", "at WWU")
-How many arguments are given to the following call to the print function?
+1. What does the following code print?
+` print("CSCI", "99 + 42", "at WWU") `
 
-print("CSCI", 99 + 42, "at WWU")
+1. How many arguments are given to the following call to the print function?
+` print("CSCI", 99 + 42, "at WWU") `
+
 Reminder: only the Exercises above need to be completed and submitted before class. The following Problem will be worked on in class.
 
 Problem
