--- a/E01.md
+++ b/E01.md
@@ -1,48 +1,49 @@
-### Lecture 1 - Exercises
-## 1S - Syllabus
+# Lecture 1 - Exercises
+
+### 1S - Syllabus
 
 1. What are you required to do to prepare for each class?
-1. Where can you find the lecture videos, slides, exercises, and problems?
-1. How many missed classes are allowed without making arrangements with the professor?
-1. What is a slip day, how many are you allowed?
-1. Can slip days be used on labs?
-// Should you expect all programming assignments to take you approximately the same amount of time?
-1. According to the academic honesty policy, which of the following are permitted?
-    - Talking about your approach to a problem with your classmates.
-    - Submitting someone else’s program as your own.
-    - Copying a few lines of someone else’s code into your solution, if you understand those lines in detail.
-    - Looking at a classmate’s code, then immediately sitting down and typing out a very similar program, but with different variable names.
-    - Looking at a classmate’s code, then taking a half hour break before sitting down to write your own.
+2. Where can you find the lecture videos, slides, exercises, and problems?
+3. How many missed classes are allowed without making arrangements with Scott?
+4. What is a slip day, how many are you allowed?
+5. Can slip days be used on labs?
+6. Should you expect all programming assignments to take you approximately the same amount of time?
+7. According to the academic honesty policy, which of the following are permitted?
+   * Talking about your approach to a problem with your classmates.
+   * Submitting someone else's program as your own.
+   * Copying a few lines of someone else's code into your solution, if you understand those lines in detail.
+   * Looking at a classmate's code, then immediately sitting down and typing out a very similar program, but with different variable names.
+   * Looking at a classmate's code, then taking a half hour break before sitting down to write your own.   
 
-## 1A - Computers and Hardware
+### 1A - Computers and Hardware
+
 1. Computers have (at least) two components that store information: main memory (RAM) and secondary storage (e.g., hard drives). Why are both needed?
-1. Which hardware component actually executes software instructions? Can it directly execute Python instructions?
+2. Which hardware component actually executes software instructions? Can it directly execute Python instructions?
 
-## 1B - Algorithms and Pseudocode
-1. Write pseudocode for a program that repeatedly prompts a user for non-negative integers; once the user inputs a negative number, the program ends and outputs the sum of the input positive integers.
+### 1B - Algorithms and Pseudocode
 
-## 1C - Calling Functions, print, and input
-1. Which of the following lines of Python contain a comment?
-    1. ` # Author: Prof X `
-    1. ` print("Hello!") # greet the user `
-    1. ` input("Enter your favorite 2-digit number (##): ") `
- 
-1. What does the following code print? 
+3. Write pseudocode for a program that repeatedly prompts a user for non-negative integers; once the user inputs a negative number, the program ends and outputs the sum of the input positive integers.
 
-` print("CSCI", 99 + 42, "at WWU") `
+### 1C - Calling Functions, `print`, and `input`
 
-1. What does the following code print?
-` print("CSCI", "99 + 42", "at WWU") `
+4. Which of the following lines of Python contain a comment?
+   1. `# Author: Scott Wehrwein`
+   2. `print("Hello!") # greet the user`
+   3. `input("Enter your favorite 2-digit number (##): ")`
+5. What does the following code print?
 
-1. How many arguments are given to the following call to the print function?
-` print("CSCI", 99 + 42, "at WWU") `
+   ```python
+   print("CSCI", 99 + 42, "at WWU")
+   ```
 
-Reminder: only the Exercises above need to be completed and submitted before class. The following Problem will be worked on in class.
+6. What does the following code print?
 
-Problem
-Write a math quiz program that works as follows: it begins by printing an arithmetic problem of your choosing. Then, it prompts the user to enter an answer. Finally, once they have pressed enter, the program prints a message showing the correct answer. Note: we don’t yet know how to check if the user’s answer was correct, but we’ll get there soon! A couple sample runs of such a program are shown below; note that the number at the end of the first line is what’s typed by the user before they press enter:
+   ```python
+   print("CSCI", "99 + 42", "at WWU")
+   ```
 
-What is 4 * 6? 24
-4 * 6 is 24.
-What is 4 * 6? 22
-4 * 6 is 24.
+7. How many arguments are given to the following call to the print function?
+
+   ```python
+   print("CSCI", 99 + 42, "at WWU")
+   ```
