--- a/E01.md
+++ b/E01.md
@@ -3,12 +3,12 @@
 ### 1S - Syllabus
 
 1. What are you required to do to prepare for each class?
-2. Where can you find the lecture videos, slides, exercises, and problems?
-3. How many missed classes are allowed without making arrangements with Scott?
-4. What is a slip day, how many are you allowed?
-5. Can slip days be used on labs?
-6. Should you expect all programming assignments to take you approximately the same amount of time?
-7. According to the academic honesty policy, which of the following are permitted?
+1. Where can you find the lecture videos, slides, exercises, and Programs of the Day? 
+1. How many missed classes are allowed without making arrangements with the Professor?
+1. What is a slip day, how many are you allowed?
+1. Which assignments can slip days be used on?
+1. How do you claim a slip day?
+1. According to the academic honesty policy, which of the following are permitted?
    * Talking about your approach to a problem with your classmates.
    * Submitting someone else's program as your own.
    * Copying a few lines of someone else's code into your solution, if you understand those lines in detail.
@@ -27,7 +27,7 @@
 ### 1C - Calling Functions, `print`, and `input`
 
 4. Which of the following lines of Python contain a comment?
-   1. `# Author: Scott Wehrwein`
+   1. `# Author: Professor Xavier`
    2. `print("Hello!") # greet the user`
    3. `input("Enter your favorite 2-digit number (##): ")`
 5. What does the following code print?
