--- a/E04.md
+++ b/E04.md
@@ -54,15 +54,16 @@ For your convience, here is a table of the first 8 powers of two:
 
 
 
-5. Convert each of the following binary numbers to decimal:
-   1. 1
-   2. 10
-   3. 1010
-   4. 1111
-6. Convert each of the following decimal numbers to binary:
-   1. 32
-   2. 15
-   3. 28
-   4. 68
+Convert each of the following binary numbers to decimal:
+5. 1
+6. 10
+7. 1010
+8. 1111
+
+Convert each of the following decimal numbers to binary:
+9. 32
+10. 15
+11. 28
+12. 68
 
 
