--- a/E05.md
+++ b/E05.md
@@ -2,20 +2,20 @@
 
 ### 5A - Boolean Expressions and Operators
 
-1. Evaluate each of the following boolean expressions:
+Evaluate each of the following boolean expressions:
 
-   1. `4 > 6`
-   2. `5 <= 5`
-   3. `3 == 6`
-   4. `4 != 5`
-   5. `True != True`
+1. `4 > 6`
+2. `5 <= 5`
+3. `3 == 6`
+4. `4 != 5`
+5. `True != True`
 
-2. Evaluate each of the following, keeping in mind order of operations.
+Evaluate each of the following, keeping in mind order of operations.
 
-   1. `10 == 4 + 6`
-   2. `"abc" == "ab" + "c"`
-   3. `'abc' == "abc"`
-   4. `"Scott" == "scott"`
+6. `10 == 4 + 6`
+7. `"abc" == "ab" + "c"`
+8. `'abc' == "abc"`
+9. `"Scott" == "scott"`
    5. `(4+3 > 5) == (1.0 > 4)`
    6. `int(5.6) != int(5.1)`
 
