--- a/E05.md
+++ b/E05.md
@@ -16,40 +16,40 @@ Evaluate each of the following, keeping in mind order of operations.
 7. `"abc" == "ab" + "c"`
 8. `'abc' == "abc"`
 9. `"Scott" == "scott"`
-   5. `(4+3 > 5) == (1.0 > 4)`
-   6. `int(5.6) != int(5.1)`
+10. `(4+3 > 5) == (1.0 > 4)`
+11. `int(5.6) != int(5.1)`
 
-3. Evaluate the following expressions, writing out each step of simplification after an operator is evaluated to show the order of evaluation as we did in the Bigger Example from the lecture video.
+Evaluate the following expressions, writing out each step of simplification after an operator is evaluated to show the order of evaluation as we did in the Bigger Example from the lecture video.
 
-   1. ```python
+12. ```python
       (3 == 5 or (3 != 5 and 5 != 7)) and 3 < 5
       ```
 
-   2. ```python
+13. ```python
       11 == 4 ** 2 or 6 != True or not "a" + "b" == "ab" 
       ```
 
-4. For each expression below, give in its **type** and **value**. The first one is done for you.
+For each expression below, give in its **type** and **value**. The first one is done for you.
 
-   1. `True or False`
+14. `True or False`
       
       **Type**: bool
       
       **Value**: True
-      
-   2. `True and False or True`
+
+15. `True and False or True`
    
       **Type:**
    
       **Value:**
    
-   3. `2**3.0`
+16. `2**3.0`
    
       **Type:**
    
       **Value:**
    
-   4. `not 1 + 5 // 2 == 3 and 4 < 5 or 4 != 5`
+17. `not 1 + 5 // 2 == 3 and 4 < 5 or 4 != 5`
    
       **Type:**
    
