--- a/E06.md
+++ b/E06.md
@@ -34,7 +34,7 @@
 
 ### 6B - Nested and Chained Conditionals
 
-4. Consider the following program. 
+Consider the following program. 
 
    ```python
    # assume x and y are numbers
@@ -47,11 +47,11 @@
            print("x and y must be equal")
    ```
 
-   1. How many comparison operators (`>`, `<`) are evaluated when the program is run with `x` set to `4` and `y` set to `5`?
-   2. How many comparison operators (`>`, `<`) are evaluated when the program is run with `x` set to `8` and `y` set to `3`?
-   3. Rewrite the program to use chained conditionals (i.e., `elif`) intstead of nested `if` statements.
+4. How many comparison operators (`>`, `<`) are evaluated when the program is run with `x` set to `4` and `y` set to `5`?
+5. How many comparison operators (`>`, `<`) are evaluated when the program is run with `x` set to `8` and `y` set to `3`?
+6. Rewrite the program to use chained conditionals (i.e., `elif`) intstead of nested `if` statements.
 
-2. Consider the following program:
+Consider the following program:
 
    ```python
    # Program 0:
@@ -62,7 +62,7 @@
            print(a)
    ```
 
-   1. Which of the following programs are equivalent to Program 0?  In other words, which of the following has exactly the same output regardless of the value of `a`?
+7. Which of the following programs are equivalent to Program 0?  In other words, which of the following has exactly the same output regardless of the value of `a`?
 
    ```python
    # Program 1:
@@ -89,9 +89,9 @@
        print(a)
    ```
 
-   2. Of the programs above that are equivalent to 0 (including Program 0 itself), which is the simplest and thus most preferable way to write it?
+8. Of the programs above that are equivalent to 0 (including Program 0 itself), which is the simplest and thus most preferable way to write it?
 
-3. Consider the following three programs. Give the **smallest positive integer** value for the variable `num_tacos` such that the three programs print **exactly** the same thing when they are executed.
+9. Consider the following three programs. Give the **smallest positive integer** value for the variable `num_tacos` such that the three programs print **exactly** the same thing when they are executed.
 
    **Program 1:**
 
