--- a/E04.md
+++ b/E04.md
@@ -39,7 +39,7 @@
 
 ### 4B - Binary Representation
 
-For your convience, here is a table of the first 8 powers of two:
+#### For your convience, here is a table of the first 8 powers of two:
 
 ```
 2^0:   1
@@ -54,14 +54,14 @@ For your convience, here is a table of the first 8 powers of two:
 
 
 
-Convert each of the following binary numbers to decimal:
+#### Convert each of the following binary numbers to decimal:
 
 5. 1
 6. 10
 7. 1010
 8. 1111
 
-Convert each of the following decimal numbers to binary:
+#### Convert each of the following decimal numbers to binary:
 
 9. 32
 10. 15
