--- a/E05.md
+++ b/E05.md
@@ -2,7 +2,7 @@
 
 ### 5A - Boolean Expressions and Operators
 
-Evaluate each of the following boolean expressions:
+#### Evaluate each of the following boolean expressions:
 
 1. `4 > 6`
 2. `5 <= 5`
@@ -12,7 +12,7 @@ Evaluate each of the following boolean expressions:
 
 
 
-Evaluate each of the following, keeping in mind order of operations.
+#### Evaluate each of the following, keeping in mind order of operations.
 
 6. `10 == 4 + 6`
 7. `"abc" == "ab" + "c"`
@@ -23,7 +23,7 @@ Evaluate each of the following, keeping in mind order of operations.
 
 
 
-Evaluate the following expressions, writing out each step of simplification after an operator is evaluated to show the order of evaluation as we did in the Bigger Example from the lecture video.
+#### Evaluate the following expressions, writing out each step of simplification after an operator is evaluated to show the order of evaluation as we did in the Bigger Example from the lecture video.
 
 12. ```python
       (3 == 5 or (3 != 5 and 5 != 7)) and 3 < 5
@@ -35,7 +35,7 @@ Evaluate the following expressions, writing out each step of simplification afte
 
 
 
-For each expression below, give in its **type** and **value**. The first one is done for you.
+#### For each expression below, give in its **type** and **value**. The first one is done for you.
 
 14. `True or False`
       
