--- a/E06.md
+++ b/E06.md
@@ -34,7 +34,7 @@
 
 ### 6B - Nested and Chained Conditionals
 
-Consider the following program. 
+#### Consider the following program. 
 
    ```python
    # assume x and y are numbers
@@ -51,7 +51,7 @@ Consider the following program.
 5. How many comparison operators (`>`, `<`) are evaluated when the program is run with `x` set to `8` and `y` set to `3`?
 6. Rewrite the program to use chained conditionals (i.e., `elif`) intstead of nested `if` statements.
 
-Consider the following program:
+#### Consider the following program:
 
    ```python
    # Program 0:
