--- a/E07.md
+++ b/E07.md
@@ -11,7 +11,7 @@
        count += 3
    ```
 
-2. Consider the following program:
+#### Consider the following program:
 
    ```python
    n = 12345
@@ -21,10 +21,10 @@
        n //= 10
    ```
 
-   1. How many times is the body of the `while` loop executed?
-   2. What are the values of `m` and `n` after the code is executed?
+2. How many times is the body of the `while` loop executed?
+3. What are the values of `m` and `n` after the code is executed?
 
-3. Consider the following code, which has two missing snippets, marked `[[1]]` and `[[2]]`.
+#### Consider the following code, which has two missing snippets, marked `[[1]]` and `[[2]]`.
 
    ```python
    i = [[1]]
@@ -33,7 +33,7 @@
      print(i)
    ```
 
-   Consider the following candidates to replace the missing snippet `[[1]]`:
+   #### Consider the following candidates to replace the missing snippet `[[1]]`:
 
    (a) `0`
 
@@ -41,7 +41,7 @@
 
    (c) `10`
 
-   and the following candidates to replace missing snipped `[[2]]`:
+   #### and the following candidates to replace missing snipped `[[2]]`:
 
    (i) `i < 9`
 
@@ -53,12 +53,12 @@
 
    To form a complete program, we need to pick a pair of snippets, one to replace `[[1]]` and one to replace `[[2]]`.
 
-   1. Which pair or pairs of snippets will cause the program to print the numbers from 1 to 10, inclusive?
-   2. Which pair or pairs of snippets will cause the program to print exactly 10 numbers? 
+4. Which pair or pairs of snippets will cause the program to print the numbers from 1 to 10, inclusive?
+5. Which pair or pairs of snippets will cause the program to print exactly 10 numbers? 
 
 ### 7B - Nested while loops
 
-4. Consider the following program:
+#### Consider the following program:
 
    ```python
    i = 0
@@ -71,7 +71,7 @@
      print()
    ```
 
-   1. How many asterisks (`*`) are printed by the program?
-   2. What are the values of `i` and `j` at the end of the program?
+6. How many asterisks (`*`) are printed by the program?
+7. What are the values of `i` and `j` at the end of the program?
 
 
