--- a/E04.md
+++ b/E04.md
@@ -39,7 +39,7 @@
 
 ### 4B - Binary Representation
 
-#### For your convience, here is a table of the first 8 powers of two:
+#### For your convenience, here is a table of the first 8 powers of two:
 
 ```
 2^0:   1
