--- a/E04.md
+++ b/E04.md
@@ -27,7 +27,7 @@
    print("c", c * 2, sep=": ")
    ```
 
-4. Last time I asked you to prompt the user for three numbers and print their sum. The last problem asked you to print the sum without spaces between the numbers and operators. Solve this problem again using what you learned about the `print` function's keyword arguments.
+4. Prompt the user for three numbers and print their sum without spaces between the numbers and operators, using what you learned about the `print` function's keyword arguments.
 
    ```
    Enter the first number: 4
