--- a/E06.md
+++ b/E06.md
@@ -49,7 +49,7 @@
 
 4. How many comparison operators (`>`, `<`) are evaluated when the program is run with `x` set to `4` and `y` set to `5`?
 5. How many comparison operators (`>`, `<`) are evaluated when the program is run with `x` set to `8` and `y` set to `3`?
-6. Rewrite the program to use chained conditionals (i.e., `elif`) intstead of nested `if` statements.
+6. Rewrite the program to use chained conditionals (i.e., `elif`) instead of nested `if` statements.
 
 #### Consider the following program:
 
