Added a hint about testing tables

--- a/E06.md
+++ b/E06.md
@@ -91,7 +91,7 @@
 
 8. Of the programs above that are equivalent to 0 (including Program 0 itself), which is the simplest and thus most preferable way to write it?
 
-9. Consider the following three programs. Give the **smallest positive integer** value for the variable `num_tacos` such that the three programs print **exactly** the same thing when they are executed.
+9. Consider the following three programs. Give the **smallest positive integer** value for the variable `num_tacos` such that the three programs print **exactly** the same thing when they are executed. Hint: what values would you put in a testing table?
 
    **Program 1:**
 
