added hint about test tables

--- a/E06.md
+++ b/E06.md
@@ -62,7 +62,7 @@
            print(a)
    ```
 
-7. Which of the following programs are equivalent to Program 0?  In other words, which of the following has exactly the same output regardless of the value of `a`?
+7. Which of the following programs are equivalent to Program 0?  In other words, which of the following has exactly the same output regardless of the value of `a`? (hint: what values of 'a' would you want to check in a test table?)
 
    ```python
    # Program 1:
