--- a/E08.md
+++ b/E08.md
@@ -25,27 +25,26 @@
 
 ### 8B - The `range` function
 
-3. What does each of the following `range` calls, converted to a list, evaluate to?
-   1. `list(range(3))`
-   2. `list(range(4, 7))`
-   3. `list(range(4, 0, -1))`
+#### What does each of the following `range` calls, converted to a list, evaluate to?
+3. `list(range(3))`
+4. `list(range(4, 7))`
+5. `list(range(4, 0, -1))`
 
-4. How many elements are in the following ranges?
+#### How many elements are in the following ranges?
 
-   1. `range(732)`
-   2. `range(6, 88)`
-   3. `range(4, 2)`
-   4. `range(20, 21)`
-   5. `range(0)`
+6. `range(732)`
+7. `range(6, 88)`
+8. `range(4, 2)`
+9. `range(20, 21)`
+10. `range(0)`
 
-5. What does the following program print?
+11. What does the following program print?
 
    ```python
    for x in range(1,4):
       print(x + x * x, end=str(x))
    ```
-
-6. Consider the following incomplete program:
+#### Consider the following incomplete program:
 
    ```python
    x = 
@@ -54,15 +53,15 @@
      print("WWU")
    ```
 
-   What pairs of values could be assigned to the variables `x` and `y` so that the program prints `WWU` 43 times? Select all correct choices.
+12. What pairs of values could be assigned to the variables `x` and `y` so that the program prints `WWU` 43 times? Select all correct choices.
 
-   1. `x: 0   y: 44`
-   2. `x: -21  y: 22` 
-   3. `x: -21  y:21`
-   4. `x: -789 y: -746`
-   5. `x: -789 y: 746` 
-   6. `x: 1   y: 44` 
+      1. `x: 0   y: 44`
+      2. `x: -21  y: 22` 
+      3. `x: -21  y:21`
+      4. `x: -789 y: -746`
+      5. `x: -789 y: 746` 
+      6. `x: 1   y: 44` 
 
-7. Last time you wrote a program that prompts the user for a positive integer $p$ and prints the powers of 2 up to $2^p$. Rewrite the program to use a `for` loop instead of a `while` loop.
+13. Last time you wrote a program that prompts the user for a positive integer $p$ and prints the powers of 2 up to $2^p$. Rewrite the program to use a `for` loop instead of a `while` loop.
 
 
