--- a/E10.md
+++ b/E10.md
@@ -42,7 +42,7 @@
 
 ### 10B - Passing inputs to functions
 
-4. Consider the following program: 
+#### Consider the following program: 
 
    ```python
    def h2m(hours, minutes):
@@ -55,10 +55,10 @@
    print(h2m(arg1, arg2))
    ```
 
-   1. Suppose the program is run with two command line arguments and prints `80`. If the first command line argument was `1`, what must the second one have been?
-   2. Suppose the program is run with two command line arguments and prints `80`. If you don't know anything about either command line argument, how many possible pairs of numbers could have been given as command line arguments?
+5. Suppose the program is run with two command line arguments and prints `80`. If the first command line argument was `1`, what must the second one have been?
+6. Suppose the program is run with two command line arguments and prints `80`. If you don't know anything about either command line argument, how many possible pairs of numbers could have been given as command line arguments?
 
-5. Consider the following program:
+#### Consider the following program:
 
    ```python
    def pnmr(n, r):
@@ -70,7 +70,7 @@
        pnmr(num, rad)
    ```
 
-   1. How many numbers does this program print?
-   2. How many times does the program print the number 1?
+7. How many numbers does this program print?
+8. How many times does the program print the number 1?
 
 
