--- a/E08.md
+++ b/E08.md
@@ -62,6 +62,6 @@
       5. `x: -789 y: 746` 
       6. `x: 1   y: 44` 
 
-13. Earlier in the class you were given an optional POTD to write a program that prompts the user for a positive integer $p$ and prints the powers of 2 up to $2^p$. Rewrite the program to use a `for` loop instead of a `while` loop.
+13. Earlier in the class you were given an optional POTD to write a program that prompts the user for a positive integer $p$ and prints the powers of 2 up to $2^p$ (starting at $p$ == 0). Rewrite the program to use a `for` loop instead of a `while` loop.
 
 
