--- a/E11.md
+++ b/E11.md
@@ -10,7 +10,7 @@
    4. Information about side-effects the function has
    5. Information about the meaning of the arguments passed to the function
 
-2. Consider the following function:
+#### Consider the following function:
 
    ```python
    def print_squares(n):
@@ -23,22 +23,22 @@
      return i**2
    ```
 
-   1. Which of the following should be included in the docstring? List all that apply.
-      a. The function prints the square of each number from 1 through `n`
+2. Which of the following should be included in the docstring? List all that apply.
+   a. The function prints the square of each number from 1 through `n`
 
-      b. The function uses a `while` loop
+   b. The function uses a `while` loop
 
-      c. The function returns the square of `n`
+   c. The function returns the square of `n`
 
-      d. The function returns the square of `i`
+   d. The function returns the square of `i`
 
-      e. The function uses a counter variable called `i`
+   e. The function uses a counter variable called `i`
 
-   2. Even with the correct subset of the above, the function could result in an error. Write a **precondition** that can be included such that as long as the precondition is satisfied, the function cannot cause an error.
+3. Even with the correct subset of the above, the function could result in an error. Write a **precondition** that can be included such that as long as the precondition is satisfied, the function cannot cause an error.
 
 ### 11B - Parameters, Local Variables, and Scope
 
-3. Consider the following program, noticing that several points in the code are marked with comments (e.g., `M1`). **Important:** the markers refer to the lines they're **on**, not the lines following them.
+#### Consider the following program, noticing that several points in the code are marked with comments (e.g., `M1`). **Important:** the markers refer to the lines they're **on**, not the lines following them.
 
    ```python
    # M1
@@ -53,10 +53,10 @@
    # M5
    ```
 
-   1. In which lines (among `M1` through `M5`) is `v2` in scope? List all that apply.
-   2. In which lines (among `M1` through `M5`) is `v3` in scope? List all that apply.
+4. In which lines (among `M1` through `M5`) is `v2` in scope? List all that apply.
+5. In which lines (among `M1` through `M5`) is `v3` in scope? List all that apply.
 
-4. Consider the following program:
+#### Consider the following program:
 
    ```python
    def print_rectangle_area(width, height):
@@ -72,7 +72,7 @@
    print_rectangle_area(w, h)
    ```
 
-   Which of the following could replace the last line of the program and leave its behavior unchanged? List all that apply.
+ 6. Which of the following could replace the last line of the program and leave its behavior unchanged? List all that apply.
 
    (a) `print(h*w)`
 
@@ -82,7 +82,7 @@
 
    (d) `print_rectangle_area(h, w)`
 
-5. What does the following program print?
+7. What does the following program print?
 
    ```python
    def f(x):
@@ -94,7 +94,7 @@
    f(4)
    ```
 
-6. What does the following program print?
+8. What does the following program print?
 
    ```python
    x = 4
