clarified instructions on q7

--- a/E10.md
+++ b/E10.md
@@ -70,7 +70,7 @@
        pnmr(num, rad)
    ```
 
-7. How many numbers does this program print?
+7. How many numbers does this program print? Count total number printed, _not_ digits or unique numbers.
 8. How many times does the program print the number 1?
 
 
