--- a/E10.md
+++ b/E10.md
@@ -56,7 +56,7 @@
    ```
 4. Optional: what part of functions would you like to have more explainations of in the videos?
 5. Suppose the program is run with two command line arguments (both positive integers) and prints `80`. If the first command line argument was `1`, what must the second one have been?
-6. Suppose the program is run with two command line arguments and prints `80`. If you don't know anything about either command line argument other than they are positive, how many possible pairs of numbers could have been given as command line arguments?
+6. Suppose the program is run with two command line arguments and prints `80`. If you don't know anything about either command line argument, how many possible pairs of numbers could have been given as command line arguments? (hint: what are you assuming? Can you assume that?)
 
 #### Consider the following program:
 
