--- a/E15.md
+++ b/E15.md
@@ -2,21 +2,21 @@
 
 ### 15A - List Basics
 
-1. Suppose that I've created a list as follows: `starks = ["Ned", "Arya", "Bran", "Sansa"]`
+### Suppose that I've created a list as follows: `starks = ["Ned", "Arya", "Bran", "Sansa"]`
 
-   For each of the following expressions, write what it evaluates to.
+For each of the following expressions, write what it evaluates to.
    
-   1. `"Ned" in starks`
-   2. `"Sansa" in starks[1:3]`
-   3. `len(starks[1:4]) == 3`
-   4. `"Arya" in (starks + ["Jon"])[2:]`
-   5. `len(starks[1:2]) * 4 == 8`
-   6. `starks[4:] + starks[1:2]`
-   7. `starks[3] + starks[1]`
+1. `"Ned" in starks`
+2. `"Sansa" in starks[1:3]`
+3. `len(starks[1:4]) == 3`
+4. `"Arya" in (starks + ["Jon"])[2:]`
+5. `len(starks[1:2]) * 4 == 8`
+6. `starks[4:] + starks[1:2]`
+7. `starks[3] + starks[1]`
 
 ### 15B - List Methods and Mutability
 
-2. Write the contents of `a` (as it would be printed by Python) after **each** line of the following program.
+8. Write the contents of `a` (as it would be printed by Python) after **each** line of the following program.
 
     ```python
     a = ["Abe", "Ike"]
@@ -27,7 +27,7 @@
     a[0][1] = a[3]
     ```
     
-3. Execute the numbered lines below in order; if one causes an error, assume it is skipped before continuing on. List all the line numbers that do **not** cause errors.
+9. Execute the numbered lines below in order; if one causes an error, assume it is skipped before continuing on. List all the line numbers that do **not** cause errors.
 
     ```python
     1  A = ["Tony", "Steve"]
@@ -40,7 +40,7 @@
     8  A[1:] = ["Bruce", "Natasha"]
     ```
 
-4. What does the following print? Be sure to check your answer on this one using Thonny.
+10. What does the following print? Be sure to check your answer on this one using Thonny.
 
    ```python
    a = [1, 2, 3]
