--- a/E18.md
+++ b/E18.md
@@ -26,7 +26,7 @@ For each of today's exercises, give the answer to the exercise **and** draw the 
    print(len(a))
    ```
 
-3. Consider the following program:
+#### Consider the following program:
 
    ```python
    a = [3]
@@ -39,7 +39,7 @@ For each of today's exercises, give the answer to the exercise **and** draw the 
    e = x + [4]
    ```
 
-   1. How many distinct list objects are created in the course of executing the program above? Be sure to include any lists that are created but not pointed at by any variable.
-   2. At the end of the program, how many other variables (not counting `a` itself) point to the same list as `a`?
+3. How many distinct list objects are created in the course of executing the program above? Be sure to include any lists that are created but not pointed at by any variable.
+4. At the end of the program, how many other variables (not counting `a` itself) point to the same list as `a`?
 
 
